[FIX] fixed horizontal scroll bar positioning
Horizontal scroll bar was showing right under the longest list and not a the bottom of the screen.

--- a/src/components/lists/style.css
+++ b/src/components/lists/style.css
@@ -18,4 +18,5 @@
 
 .droppableLists {
     display: flex;
+    height: 100%;
 }
